--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,7 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+*.js linguist-language=python
+*.html linguist-language=python
+*.css linguist-language=python
